<resources>
    <string name="app_name">SaferU</string>
    <string name="title_home">Maps</string>
    <string name="title_dashboard">Time</string>
    <string name="title_settings">Settings</string>
    <string name="saferU_logo">SaferU Logo</string>
    <string name="settings">Settings</string>
    <string name="darkMode">Dark Mode</string>
    <string name="location">Location</string>
    <string name="notDescription">Notification Drop Down</string>
    <string name="dropDownText">Notifications</string>
    <string name="satelliteText">Satellite Map</string>
    <string name="alertDistText">Alert Distance</string>
    <string name="alertDistSpinner">Options for alert distance</string>
    <string name="alertToneText">Alert Tone</string>
    <string name="alertToneSpinner">Options for alert tones</string>

    <string-array name="notificationOptions">
        <item>Lock Screen</item>
        <item>Banner</item>
        <item>Silent</item>
    </string-array>

    <string-array name="distanceOption">
        <item>500 Feet</item>
        <item>1/2 Mile</item>
        <item>1 Mile</item>
        <item>2 Miles</item>
        <item>5 Miles</item>
    </string-array>

    <string-array name="toneOption">
        <item>Bell</item>
        <item>Chimes</item>
        <item>Minecraft Villager Noise</item>
        <item>Birds</item>
        <item>Thud</item>
    </string-array>
    <string name="title_notifications">Notifications</string>
    <string name="my_map_api_key">AIzaSyBk9vnDBLuNScOlfjDZCjeSwj1aaIJsKvc</string>

    <string name="title_search">Search</string>
    <string name="past_24_hours_view">Past 24 Hours View</string>
    <string name="viewing_past_24_hours_view">Viewing Past 24 Hours</string>
    <string name="past_7_days_view">Past 7 Days View</string>
    <string name="past_month_view">Past 1 Month View</string>
    <string name="custom_time_view">Custom Time View</string>
</resources>