<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <TextView
        android:id="@+id/text_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="71dp"
        android:layout_height="71dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/saferU_logo"
        android:src="@drawable/screenshot_2023_03_28_170746"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="124dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/settings"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="135dp"
        android:text="@string/darkMode"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="40dp"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="190dp"
        android:text="@string/location"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/notDescription"
        android:entries="@array/notificationOptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="245dp"
        android:text="@string/dropDownText"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="300dp"
        android:text="@string/satelliteText"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="285dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="355dp"
        android:text="@string/alertDistText"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/alertDistSpinner"
        android:entries="@array/distanceOption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="410dp"
        android:text="@string/alertToneText"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="395dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/alertToneSpinner"
        android:entries="@array/toneOption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>